# Hoplixi

./: .gitignore  AGENT.md  AGENTS.md  APP_CAPABILITIES.md  CHANGELOG.md  ERROR.MD  ErrorDB.md  GEMINI.md  README.md  analysis_options.yaml  build.yaml  build_apk_prod.bat  build_prod.bat  create_dtos.dart  create_system_dto_dao.dart  devtools_options.yaml  flavorizr.yaml  flutter_native_splash.yaml  new-storage-entities.md  plan.md  plan_to_mvp.md  platform_config_status.md  pubspec.yaml  skills-lock.json  tables_schema.md  промпт изменения структуры бд.txt  тз облачная snapshot синхронизация.txt
.github/: copilot-instructions.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  task_completion.md  (+1 more)
agent docs/: flavorizr README.md
android/: build.gradle.kts  create_debug_keystore.bat  create_keystore.bat  settings.gradle.kts
docs/: cloud-sync-guide.md  usage-guide.md  versioning.md
docs-ai/: AGENT.md  add-new-vault-entity-guide.md  agent-architecture-map.md  agent-task-router.md  cloud-sync-auth.md  cloud-sync-http.md  cloud-sync-module.md  cloud-sync-storage.md  crypt-api-usage.md  db-migrations.md  error-handling.md  flutter-rules.md  localization.md  main-store-async-notifier-analysis.md  multi-window-architecture.md  rust-integration.md  shared-ui-components.md  state-management.md  wolt-modal-sheet.md
integration_test/: simple_test.dart
ios/: Podfile
lib/: app.dart  di_init.dart  flavors.dart  global_key.dart  main.dart  run_sub_window_entry.dart  setup_tray.dart
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: crypt_api.rs  icon_pack_catalog_api.rs  keepass_api.rs  logging.rs  mod.rs  simple.rs
rust/src/api/crypt_api/: mod.rs  operations.rs  types.rs
rust/src/api/icon_pack_catalog_api/: constants.rs  errors.rs  import.rs  mod.rs  storage.rs  types.rs  utils.rs
rust/src/api/keepass_api/: export.rs  mod.rs  types.rs
rust_builder/: pubspec.yaml
rust_packages/hoplixi_file_crypt/: Cargo.toml  README.md
rust_packages/hoplixi_file_crypt/src/: cleanup.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  progress.rs  types.rs
rust_packages/hoplixi_file_crypt/src/compress/: gzip.rs  mod.rs  sevenz.rs
rust_packages/hoplixi_file_crypt/src/crypto/: cipher.rs  kdf.rs  mod.rs  nonce.rs
rust_packages/hoplixi_file_crypt/src/header/: encrypted.rs  mod.rs  public.rs
test/: duplicate_passwords_analysis_test.dart
utils_bat/: gen_local.bat  generate_proto.bat  merge_to_main.bat
web/: index.html
тз авторизация и менджмент токенов/: тз.txt
(+2681 files in other folders)
