[package]
name = "rust_lib_hoplixi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
log = "0.4.29"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
hoplixi_file_crypt = { path = "../rust_packages/hoplixi_file_crypt" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
