[package]
name = "rust_lib_hoplixi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
log = "0.4.29"
anyhow = "1.0.102"
tokio = { version = "1.51.1", features = ["full"] }
keepass = {	version = "0.10.5", features = ["utilities"] }
hoplixi_file_crypt = { path = "../rust_packages/hoplixi_file_crypt" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
