[package]
name = "rust_lib_hoplixi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
log = "0.4.29"
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["full"] }
keepass = {	version = "0.12.5", features = ["utilities"] }
hoplixi_file_crypt = { path = "../rust_packages/hoplixi_file_crypt" }
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
archive = "0.3.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
